# Zoya-Ai-assistant-

./: .env.example  .gitignore  README.md  push.bat  pyproject.toml  requirements.txt
.cursor/: mcp.json
.jetro/: mcp-config.json
config/: applications.yaml  settings.yaml
scripts/: demo_gemini.py  demo_voice.py
src/zoya/: __init__.py
src/zoya/automation/: schemas.py
src/zoya/automation/controllers/: __init__.py  app_controller.py  filesystem.py  keyboard.py  mouse.py  process_manager.py  system.py  window_manager.py
src/zoya/automation/tools/: __init__.py  app.py  base.py  keyboard.py  mouse.py  power.py  registry.py
src/zoya/core/: __init__.py  bootstrap.py  config.py  exceptions.py  logging.py  paths.py
src/zoya/core/config/: __init__.py  env.py  manager.py  models.py  yaml_settings.py
src/zoya/llm/: __init__.py  client.py  errors.py  facade.py  function_tools.py  history.py  retry.py  schemas.py
src/zoya/voice/: __init__.py  capture.py  config.py  exceptions.py  listener.py  pipeline.py  transcriber.py
tests/voice/: test_config.py  test_listener.py
